# ChatGPT

./: .env  .env.development  .eslintrc.cjs  .gitignore  .stylelintrc  LICENSE  README.md  index.html  messages.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  upx.py
src-tauri/icons/: icon.icns
src-tauri/linux/: chatgpt-client.desktop
src-tauri/src/: chat.rs  config.rs  error.rs  logger.rs  main.rs  time.rs
src-tauri/src/api/: chat.rs  client.rs  mod.rs  models.rs  url.rs
src-tauri/src/chat/: chat.rs  client.rs  mod.rs  models.rs
src-tauri/src/db/: conversation.rs  manager.rs  message.rs  mod.rs  topic.rs
src-tauri/src/export/: markdown.rs
src-tauri/wix/: app.wxs
src-tauri/wix/locales/: zh-CN.wxl
src/components/: Chat.tsx  ChatBubble.tsx  ChatPage.tsx  Menu.tsx  Message.tsx  Progress.tsx  Scrollbar.tsx  Settings.tsx  chat.tsx
src/components/floatButtons/: Global.tsx
src/components/message/: Input.tsx  List.tsx  Message.tsx
src/components/scrollbar/: Scrollbar.tsx  index.ts
src/components/settings/: Global.tsx  Prompt.tsx  Topic.tsx
src/lib/: config.ts  fs.ts  index.ts  message.ts  model.ts  request.ts  time.ts
src/styles/: Chat.scss  ChatBubble.scss  ChatPage.scss  Menu.scss  Message.scss  Progress.scss  Scrollbar.scss  index.scss
types/: chat.d.ts  index.d.ts  messasge.d.ts  model.d.ts  router.d.ts  settings.d.ts
