[package]
name = "chatgpt-client"
version = "0.0.0"
description = "A ChatGPT client."
authors = ["thep0y"]
license = "MIT"
repository = "https://github.com/thep0y/ChatGPT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [
    "dialog-open",
    "dialog-save",
    "fs-write-file",
    "os-all",
    "path-all",
    "protocol-asset",
    "shell-open",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ['formatting'] }
dirs = "4.0"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "socks"] }
url = "2.3"

# 无边框时使用的库
# window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
